# DotsAndBoxes

./: .clang-format  .gitignore  CMakeLists.txt  Node.cpp  Node.h  README.md  UCT.cpp  UCT.h  assess.cpp  assess.h  board.cpp  board.h  chess.txt  define.h  fun.cpp  fun.h  main.cpp  stupidAI.h  通信协议说明与引擎编写规范.txt
src/: main.cpp
src/AI/: Node.cpp  Node.h  UCT.cpp  UCT.h  assess.cpp  assess.h  board.cpp  board.h  define.h
src/CJSON/: datarecorder.cpp  datarecorder.h
src/element/: Time.cpp  Time.h
test/: xieyi.cpp
